<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/diagSavePicture_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="400dp"
    android:minWidth="400dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/diagSavePicture_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="TextView"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        tools:text="@string/dialogSavePicture_title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:text="TextView"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="132dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/diagSavePicture_pictureName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/dialogSavePicture_hint"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:maxLength="16"
                />


            <ImageView
                android:id="@+id/diagSavePicture_pictureView"
                android:layout_width="272dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/diagSavePicture_pictureName" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/diagSavePicture_uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/background_light"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/button_upload"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/diagSavePicture_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/background_light"
            android:paddingEnd="40dp"
            android:paddingLeft="40dp"
            android:text="@string/button_cancel"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>